--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="info-nav">
 
                         <div class="image-logo">
-                            <img src="image/logo.png" />
+                            <img src="../image/logo.png" />
                         </div>
 
                         <div class="info-nav-nav">
