--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
                     <div class="info-nav">
 
                         <div class="image-logo">
-                            <img src="../image/logo.png" />
+                            <img src="logo.png" />
                         </div>
 
                         <div class="info-nav-nav">
@@ -79,7 +79,7 @@
         <section class="two">
             <div class="truck-info">
                 <div class="truck-image">
-                    <img src="image/truck.png" class="image-truck-info" />
+                    <img src="truck.png" class="image-truck-info" />
                 </div>
 
                 <div class="truck-text">
@@ -168,41 +168,41 @@
             <div class="our-services-1">
 
                 <div class="box">
-                    <img src="image/towing.png" class="box-image" />
+                    <img src="towing.png" class="box-image" />
                     <h5>Репатриране на кола</h5>
                     <p class="box-text">Дюс лейбис топката накрайник Барабан leberkas тендерлойн свински труд cupim бекон ipsum jowl кюфтен т-кост.
                     </p>
                 </div>
 
                 <div class="box">
-                    <img src="image/hail.png" class="box-image" />
+                    <img src="hail.png" class="box-image" />
                     <h5>Репатриране при градушка</h5>
                     <p class="box-text">Дюс лейбис топката накрайник Барабан leberkas тендерлойн свински труд cupim бекон ipsum jowl кюфтен т-кост.
                     </p>
                 </div>
 
                 <div class="box">
-                    <img src="image/flood.png" class="box-image" />
+                    <img src="flood.png" class="box-image" />
                     <h5>Репатриране при наводнения</h5>
                     <p class="box-text">Дюс лейбис топката накрайник Барабан leberkas тендерлойн свински труд cupim бекон ipsum jowl кюфтен т-кост.
                     </p>
                 </div>
                 <div class="box">
-                    <img src="image/accident.png" class="box-image" />
+                    <img src="accident.png" class="box-image" />
                     <h5>Репатриране при инцидент</h5>
                     <p class="box-text">Дюс лейбис топката накрайник Барабан leberkas тендерлойн свински труд cupim бекон ipsum jowl кюфтен т-кост.
                     </p>
                 </div>
 
                 <div class="box">
-                    <img src="image/fire.png" class="box-image" />
+                    <img src="fire.png" class="box-image" />
                     <h5>Репатриране при пожар</h5>
                     <p class="box-text">Дюс лейбис топката накрайник Барабан leberkas тендерлойн свински труд cupim бекон ipsum jowl кюфтен т-кост.
                     </p>
                 </div>
 
                 <div class="box">
-                    <img src="image/motocycle.png" class="box-image" />
+                    <img src="motocycle.png" class="box-image" />
                     <h5>Репатриране на мотоциклети</h5>
                     <p class="box-text">Дюс лейбис топката накрайник Барабан leberkas тендерлойн свински труд cupim бекон ipsum jowl кюфтен т-кост.
                     </p>
@@ -220,42 +220,42 @@
             <div class="gallery-image">
 
                 <div class="box-gallery">
-                    <img src="image/image-1.jpg" class="image-gallery" />
+                    <img src="image-1.jpg" class="image-gallery" />
                     <div class="middle">
                         <div class="text"><a href="https://www.facebook.com/%D0%9F%D1%8A%D1%82%D0%BD%D0%B0-%D0%9F%D0%BE%D0%BC%D0%BE%D1%89-%D0%9F%D0%B5%D1%82%D1%80%D0%B8%D1%87-%D0%9A%D1%83%D0%BB%D0%B0%D1%82%D0%B0-%D0%A1%D0%B0%D0%BD%D0%B4%D0%B0%D0%BD%D1%81%D0%BA%D0%B8-%D0%97%D0%BB%D0%B0%D1%82%D0%B0%D1%80%D0%B5%D0%B2%D0%BE-%D0%91%D0%BB%D0%B0%D0%B3%D0%BE%D0%B5%D0%B2%D0%B3%D1%80%D0%B0%D0%B4-173809853382548/photos">Виж повече</a></div>
                     </div>
                 </div>
 
                 <div class="box-gallery">
-                    <img src="image/image-2.jpg" class="image-gallery" />
+                    <img src="image-2.jpg" class="image-gallery" />
                     <div class="middle">
                         <div class="text"><a href="https://www.facebook.com/%D0%9F%D1%8A%D1%82%D0%BD%D0%B0-%D0%9F%D0%BE%D0%BC%D0%BE%D1%89-%D0%9F%D0%B5%D1%82%D1%80%D0%B8%D1%87-%D0%9A%D1%83%D0%BB%D0%B0%D1%82%D0%B0-%D0%A1%D0%B0%D0%BD%D0%B4%D0%B0%D0%BD%D1%81%D0%BA%D0%B8-%D0%97%D0%BB%D0%B0%D1%82%D0%B0%D1%80%D0%B5%D0%B2%D0%BE-%D0%91%D0%BB%D0%B0%D0%B3%D0%BE%D0%B5%D0%B2%D0%B3%D1%80%D0%B0%D0%B4-173809853382548/photos">Виж повече</a></div>
                     </div>
                 </div>
 
                 <div class="box-gallery">
-                    <img src="image/image-3.jpg" class="image-gallery" />
+                    <img src="image-3.jpg" class="image-gallery" />
                     <div class="middle">
                         <div class="text"><a href="https://www.facebook.com/%D0%9F%D1%8A%D1%82%D0%BD%D0%B0-%D0%9F%D0%BE%D0%BC%D0%BE%D1%89-%D0%9F%D0%B5%D1%82%D1%80%D0%B8%D1%87-%D0%9A%D1%83%D0%BB%D0%B0%D1%82%D0%B0-%D0%A1%D0%B0%D0%BD%D0%B4%D0%B0%D0%BD%D1%81%D0%BA%D0%B8-%D0%97%D0%BB%D0%B0%D1%82%D0%B0%D1%80%D0%B5%D0%B2%D0%BE-%D0%91%D0%BB%D0%B0%D0%B3%D0%BE%D0%B5%D0%B2%D0%B3%D1%80%D0%B0%D0%B4-173809853382548/photos">Виж повече</a></div>
                     </div>
                 </div>
 
                 <div class="box-gallery">
-                    <img src="image/image-5.jpg" class="image-gallery" />
+                    <img src="image-5.jpg" class="image-gallery" />
                     <div class="middle">
                         <div class="text"><a href="https://www.facebook.com/%D0%9F%D1%8A%D1%82%D0%BD%D0%B0-%D0%9F%D0%BE%D0%BC%D0%BE%D1%89-%D0%9F%D0%B5%D1%82%D1%80%D0%B8%D1%87-%D0%9A%D1%83%D0%BB%D0%B0%D1%82%D0%B0-%D0%A1%D0%B0%D0%BD%D0%B4%D0%B0%D0%BD%D1%81%D0%BA%D0%B8-%D0%97%D0%BB%D0%B0%D1%82%D0%B0%D1%80%D0%B5%D0%B2%D0%BE-%D0%91%D0%BB%D0%B0%D0%B3%D0%BE%D0%B5%D0%B2%D0%B3%D1%80%D0%B0%D0%B4-173809853382548/photos">Виж повече</a></div>
                     </div>
                 </div>
 
                 <div class="box-gallery">
-                    <img src="image/image-7.jpg" class="image-gallery" />
+                    <img src="image-7.jpg" class="image-gallery" />
                     <div class="middle">
                         <div class="text"><a href="https://www.facebook.com/%D0%9F%D1%8A%D1%82%D0%BD%D0%B0-%D0%9F%D0%BE%D0%BC%D0%BE%D1%89-%D0%9F%D0%B5%D1%82%D1%80%D0%B8%D1%87-%D0%9A%D1%83%D0%BB%D0%B0%D1%82%D0%B0-%D0%A1%D0%B0%D0%BD%D0%B4%D0%B0%D0%BD%D1%81%D0%BA%D0%B8-%D0%97%D0%BB%D0%B0%D1%82%D0%B0%D1%80%D0%B5%D0%B2%D0%BE-%D0%91%D0%BB%D0%B0%D0%B3%D0%BE%D0%B5%D0%B2%D0%B3%D1%80%D0%B0%D0%B4-173809853382548/photos">Виж повече</a></div>
                     </div>
                 </div>
 
                 <div class="box-gallery">
-                    <img src="image/image-8.jpg" class="image-gallery" />
+                    <img src="image-8.jpg" class="image-gallery" />
                     <div class="middle">
                         <div class="text"><a href="https://www.facebook.com/%D0%9F%D1%8A%D1%82%D0%BD%D0%B0-%D0%9F%D0%BE%D0%BC%D0%BE%D1%89-%D0%9F%D0%B5%D1%82%D1%80%D0%B8%D1%87-%D0%9A%D1%83%D0%BB%D0%B0%D1%82%D0%B0-%D0%A1%D0%B0%D0%BD%D0%B4%D0%B0%D0%BD%D1%81%D0%BA%D0%B8-%D0%97%D0%BB%D0%B0%D1%82%D0%B0%D1%80%D0%B5%D0%B2%D0%BE-%D0%91%D0%BB%D0%B0%D0%B3%D0%BE%D0%B5%D0%B2%D0%B3%D1%80%D0%B0%D0%B4-173809853382548/photos">Виж повече</a></div>
                     </div>
@@ -266,13 +266,13 @@
         </section>
 
         <div class="image-truck-footer">
-            <img src="image/image1-footer.1.png" class="image-footer" />
+            <img src="image1-footer.1.png" class="image-footer" />
         </div>
         <section class="footer">
             <div class="footer-1">
 
                 <div class="footer-section-1">
-                    <img src="image/logo.png" class="image-logo-footer" />
+                    <img src="logo.png" class="image-logo-footer" />
                     <p class="text-truck-footer"><a href="#A8">24/7 Иван</a></p>
                     <p class="text-footer">Пътна помощ</p>
 
