--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <div class="info-nav-1">
 
                     <div class="image-logo">
-                        <img src="image/logo.png" />
+                        <img src="logo.png" />
                     </div>
 
                     <div class="info-nav-nav">
